Corrige problemas na geração de PDF

--- a/templates/pdf_template.html
+++ b/templates/pdf_template.html
@@ -65,7 +65,7 @@
 <body>
     <div class="header">
         <h1>Anamnese Psicanalítica</h1>
-        <img src="{{ data.logo_path|default('image/logo_bg.png') }}" alt="Logo" class="logo">
+        <img src="{{ data.logo_path }}" alt="Logo" class="logo">
     </div>
     
     <!-- Dados Pessoais -->
